<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main menu strings -->

    <string name="app_name">Numbersorter</string>
    <string name="main_menu">Main Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Number Sorter</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="about">About</string>
    <string name="exit_game">Exit</string>
    <string name="enter">Enter</string>

    <!-- About scree strings -->

    <string name="about_app">About Numbersorter</string>
    <string name="about_text">	    Numbersorter is a program written and designed by Ricky Dalziel, for his 4th year honours project.
	    The aim of the game is to swipe a mxn grid of numbers into position so that they read from 1 - (m*n).	</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- New game dialog strings -->

    <string name="newgametext">Please select a board width and height</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="cancel">Cancel</string>

    <!-- Array options for the dialog box -->

    <string-array name="size_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="title_activity_game">Game</string>
    <string name="title_activity_unsolve_dialog">Unsolveable?</string>
    <string name="unsolveable">Are you sure this grid is unsolvable? (WARNING -  will end current game)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_unsolve_outcome">UnsolveOutcome</string>
    <string name="title_activity_quit">QuitActivity</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="wintext">Congratulations! You solved the grid! Please enter your name below:</string>
    <string name="enter_name">Enter name</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="name">Name</string>
    <string name="moves">Moves</string>
    <string name="clear_memory">Clear Memory</string>
    <string name="title_activity_clear_memory">ClearMemoryActivity</string>
    <string name="solvable_only">Use only solvable grids</string>
    
    <string name="cleartext">Are you sure you want to delete the saved games and leaderboards?</string>

</resources>