<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cleartext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/cleartext" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>


            <Button
                android:id="@+id/clear_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelPressed"
                android:text="@string/cancel" />
            
            
            <Button
                android:id="@+id/clear_yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="yesPressed"
                android:text="@string/yes" />
        </TableRow>
    </TableLayout>

</LinearLayout>